# sistema_defensa

./: .gitignore  Cargo.toml
gui/: Cargo.toml
gui/src/: app.rs  config.rs  lib.rs  log.rs  metrics.rs  plots.rs
gui/src/views/: mod.rs  panel_alertas.rs  panel_graficas.rs  panel_metricas.rs
instrumentos/: Cargo.toml
instrumentos/src/: cpu.rs  disco.rs  interfaces.rs  lib.rs  memoria.rs  mod.rs  procesos.rs
src/: main.rs
src/GUI/: Cargo.toml
